Adding more detailed explanations for the Chatbot Code

--- a/Chatbot/chatbot_non api with explanations.ipynb
+++ b/Chatbot/chatbot_non api with explanations.ipynb
@@ -68,9 +68,9 @@
    "outputs": [],
    "source": [
     "# Load datasets\n",
-    "customers_df = pd.read_csv(\"../Cleaned_Datasets/customer_SG_only.csv\", index_col=0)  # customer data\n",
-    "orders_df = pd.read_csv(\"../Cleaned_Datasets/orders_generated.csv\", index_col=0)  # order data\n",
-    "products_df = pd.read_csv(\"../Cleaned_Datasets/products_cleaned.csv\", index_col=0)  # product data\n",
+    "customers_df = pd.read_csv(\"../Cleaned_Datasets/customers_sg.csv\", index_col=0)  # customer data\n",
+    "orders_df = pd.read_csv(\"../Cleaned_Datasets/orders.csv\", index_col=0)  # order data\n",
+    "products_df = pd.read_csv(\"../Cleaned_Datasets/products.csv\", index_col=0)  # product data\n",
     "\n",
     "# Convert customer_id columns to strings in both DataFrames\n",
     "customers_df['customer_id'] = customers_df['customer_id'].astype(str)\n",
@@ -232,7 +232,7 @@
     "            checkout_message = f\"and their most recent checkout was {last_checkout_days_ago} days ago on {last_checkout_date}.\"\n",
     "        \n",
     "        context[\"last_customer\"] = customer_id  # Store for future queries\n",
-    "        return f\"Customer {customer_id} last logged in {last_login_days_ago} days ago on {last_login_date} {checkout_message}\"\n",
+    "        return f\"Great news! We found the information for customer ID {customer_id}. Customer {customer_id} last logged in {last_login_days_ago} days ago on {last_login_date} {checkout_message}\"\n",
     "    \n",
     "    return \"Could not find the customer. Please check the ID!\""
    ]
@@ -320,18 +320,23 @@
    "outputs": [],
    "source": [
     "# Function to get order status\n",
-    "def get_order_status(order_id):\n",
-    "    order_id = str(order_id)  # Ensure order ID is a string\n",
-    "    orders_df['order_id'] = orders_df['order_id'].astype(str)\n",
     "\n",
-    "    order = orders_df[orders_df['order_id'] == order_id]\n",
-    "    if not order.empty:\n",
-    "        product_id = order['product_id'].values[0]\n",
-    "        order_time = order['order_time'].values[0]\n",
-    "        context[\"last_order\"] = order_id  # Store order ID for follow-up\n",
+    "def get_order_status(order_id):\n",
+    "    # Check if the order_id exists in the DataFrame index\n",
+    "    if order_id in orders_df.index:\n",
+    "        # Retrieve the order details using .loc since order_id is the index\n",
+    "        order = orders_df.loc[order_id]\n",
+    "        product_id = order['product_id']\n",
+    "        order_time = order['order_time']\n",
+    "        \n",
+    "        # Store the order ID in the context for potential follow-up queries\n",
+    "        context[\"last_order\"] = order_id  \n",
+    "        \n",
+    "        # Return a message with the order time and associated product ID\n",
     "        return (f\"Good news! Order {order_id} was placed on {order_time}. \"\n",
     "                f\"The order includes product {product_id}. \")\n",
     "    else:\n",
+    "        # If the order ID is not found, prompt the user to check the ID\n",
     "        return (f\"Oops, it seems there’s no order with ID {order_id}. \"\n",
     "                \"Can you please check the ID and try again? I’m here to help!\")"
    ]
@@ -341,9 +346,9 @@
    "metadata": {},
    "source": [
     "**Explanation**:  \n",
-    "  - **Order Lookup**: The function retrieves the order details by matching the `order_id` in the `orders_df` dataframe.\n",
-    "  - **Order Status**: If the order is found, the chatbot returns details such as the order time and the associated product ID. If the order isn’t found, it prompts the user to check the order ID.\n",
-    "  - **Context Update**: The `order_id` is stored in the **context** for follow-up queries.\n",
+    "  - **Order Lookup**: The function retrieves the order details by accessing the `order_id` directly as an index in the `orders_df` DataFrame using `.loc`. This method is used because `order_id` is set as the index in `orders_df`.\n",
+    "  - **Order Details Retrieval**: If the order is found, the chatbot returns relevant details, including the order time and the associated product ID. If the order isn’t found, it prompts the user to verify the order ID.\n",
+    "  - **Context Update**: The `order_id` is stored in the `context` for potential follow-up queries related to the same order.\n",
     "\n",
     "---"
    ]
@@ -435,8 +440,9 @@
     "    # Regex patterns to detect order query intent\n",
     "    if re.search(r'order.*id', user_input, re.IGNORECASE):\n",
     "        intent = \"order_query\"\n",
-    "        order_id = re.search(r'order_[0-9]+', user_input, re.IGNORECASE)\n",
-    "        return intent, {\"order_id\": order_id.group(0)} if order_id else {\"order_id\": None}\n",
+    "        order_id = re.search(r'\\b\\d+\\b', user_input)  \n",
+    "        return intent, {\"order_id\": int(order_id.group(0))} if order_id else {\"order_id\": None}\n",
+    "\n",
     "    \n",
     "    # Regex patterns to detect product price or rating queries\n",
     "    if re.search(r'price|rating', user_input, re.IGNORECASE):\n",
@@ -454,11 +460,19 @@
    "metadata": {},
    "source": [
     "**Explanation**:  \n",
-    "  - **Intent Detection**: The function uses regular expressions to detect the user’s intent (e.g., whether they’re asking for customer information, an order status, or product details).\n",
-    "  - **Entity Extraction**: The function extracts relevant entities like **customer IDs**, **order IDs**, or **product names** based on the detected intent. For example, if a user asks for the price of a product, the product name is extracted from the input.\n",
-    "  - This process ensures the chatbot understands the user’s query and can handle it appropriately.\n",
+    "  - **Intent Detection**: The function uses regular expressions to determine the user’s intent. It prioritizes certain types of queries in the following order: \n",
+    "    - **Recommendation Queries**: If the input contains both \"recommend\" and \"customer,\" the function identifies it as a recommendation request.\n",
+    "    - **Customer Queries**: If the input mentions \"customer\" followed by \"id\" and a number, it detects a request for customer information.\n",
+    "    - **Order Queries**: If the input mentions \"order\" and \"id,\" the function identifies this as an order-related query and attempts to extract an `order_id`.\n",
+    "    - **Product Price or Rating Queries**: If the input includes \"price\" or \"rating,\" the function detects this as a product-related query and looks for a product name following \"price of\" or \"rating of.\"\n",
     "\n",
-    "  ---"
+    "  - **Entity Extraction**: Based on the detected intent, the function extracts relevant entities such as **customer IDs**, **order IDs**, or **product names**. For example, in a recommendation query, it extracts the `customer_id`, while in a product price query, it extracts the `product_name`.\n",
+    "\n",
+    "  - **Fallback Handling**: If none of the specific patterns are matched, the function defaults to a \"general\" intent, indicating that no specific query type was identified.\n",
+    "\n",
+    "This approach enables the chatbot to categorize and understand a variety of user queries, allowing it to handle each request appropriately based on the intent and extracted entities.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -661,28 +675,27 @@
     "\n",
     "- **User**: What’s the last login for **customer ID** 104511?\n",
     "\n",
-    "- **Bot**: Great news! We found the information for **customer ID** 104511. They last logged in 4 days ago on 2024-10-23, and their most recent checkout was 4 days ago on 2024-10-23.\n",
+    "- **Bot**: Great news! We found the information for customer ID 104511. Customer 104511 last logged in 4 days ago on 2024-11-05 and their most recent checkout was 3 days ago on 2024-11-06.\n",
     "\n",
     "\n",
     "**Question 2**\n",
     "\n",
     "- **User**: Can you check the details for **customer ID** 20596?\n",
     "\n",
-    "- **Bot**: Great news! We found the information for **customer ID** 20596. They last logged in 64 days ago on 2024-08-24, and this customer has never checked out.\n",
+    "- **Bot**: Great news! We found the information for customer ID 20596. Customer 20596 last logged in 64 days ago on 2024-09-06 and their most recent checkout was 329 days ago on 2023-12-16.\n",
     "\n",
     "\n",
     "**Question 3**\n",
     "\n",
     "- **User**: Tell me the last checkout date for **customer ID** 119330!\n",
     "\n",
-    "- **Bot**: Great news! We found the information for **customer ID** 119330. They last logged in 12 days ago on 2024-10-15, and their most recent checkout was 18 days ago on 2024-10-09.\n",
-    "\n",
+    "- **Bot**: Great news! We found the information for customer ID 119330. Customer 119330 last logged in 12 days ago on 2024-10-28 and their most recent checkout was 29 days ago on 2024-10-11.\n",
     "\n",
     "**Question 4**\n",
     "\n",
     "- **User**: When was the last login for **customer ID** 46400?\n",
     "\n",
-    "- **Bot**: Great news! We found the information for **customer ID** 46400. They last logged in 295 days ago on 2024-01-06, and this customer has never checked out.\n",
+    "- **Bot**: Great news! We found the information for customer ID 46400. Customer 46400 last logged in 295 days ago on 2024-01-19 and their most recent checkout was 65 days ago on 2024-09-05.\n",
     "\n",
     "---\n",
     "\n",
@@ -690,30 +703,30 @@
     "\n",
     "**Question 1**\n",
     "\n",
-    "- **User**: What is the status of **order ID** order_123?\n",
+    "- **User**: What is the status of **order ID** 123?\n",
     "\n",
-    "- **Bot**: Good news! **Order ID** order_123 was placed on 2019-06-25 16:16:43.205354. The order includes product 11756.\n",
+    "- **Bot**: Good news! Order 123 was placed on 2019-11-24 09:59:00. The order includes product 10372. \n",
     "\n",
     "\n",
     "**Question 2**\n",
     "\n",
-    "- **User**: Can you check the order status for **order ID** order_987?\n",
+    "- **User**: Can you check the order status for **order ID** 987?\n",
     "\n",
-    "- **Bot**: Good news! **Order ID** order_987 was placed on 2019-10-12 22:04:03.829836. The order includes product 4533.\n",
+    "- **Bot**: Good news! Order 987 was placed on 2019-04-04 11:02:00. The order includes product 860.\n",
     "\n",
     "\n",
     "**Question 3**\n",
     "\n",
-    "- **User**: Tell me the order time for **order ID** order_928!\n",
+    "- **User**: Tell me the order time for **order ID** 928!\n",
     "\n",
-    "- **Bot**: Good news! **Order ID** order_928 was placed on 2019-09-10 20:11:41.736175. The order includes product 6108.\n",
+    "- **Bot**: Good news! Order 928 was placed on 2019-05-15 22:45:00. The order includes product 6540.\n",
     "\n",
     "\n",
     "**Question 4**\n",
     "\n",
-    "- **User**: What product is included in **order ID** order_65893?\n",
+    "- **User**: What product is included in **order ID** 65893?\n",
     "\n",
-    "- **Bot**: Good news! **Order ID** order_65893 was placed on 2019-03-25 15:29:08.967064. The order includes product 4471.\n",
+    "- **Bot**: Good news! Order 65893 was placed on 2019-07-12 09:14:00. The order includes product 19596.\n",
     "\n",
     "---\n",
     "\n",
@@ -723,14 +736,14 @@
     "\n",
     "- **User**: What’s **the price of** shoulder bag?\n",
     "\n",
-    "- **Bot**: I found the product you're looking for! The '1081 PU SLING BAG KULIT leather Casual Beg Tangan Wanita women Shoulder Wallet Purse Travel READY STOCK QQF WHOLESALE | Shopee Malaysia' is priced at 4.017214855598254.\n",
+    "- **Bot**: I found the product you're looking for! The '1081 PU SLING BAG KULIT leather Casual Beg Tangan Wanita women Shoulder Wallet Purse Travel READY STOCK QQF WHOLESALE | Shopee Malaysia' is priced at 4.017214855598254\n",
     "\n",
     "\n",
     "**Question 2**\n",
     "\n",
     "- **User**: Can you find **the price of** wireless keyboard?\n",
     "\n",
-    "- **Bot**: I found the product you're looking for! The 'NIXXOS For iPad10 Wireless Keyboard Ccase for 10.2'' iPad 7th/8th/9th Gen 10.9'' Air4/Air5 2021/2020 Pro 11'' 7-color Backlight Magnetic Keyboard Leather Cover | Shopee Malaysia' is priced at 21.487428297386007.\n",
+    "- **Bot**: I found the product you're looking for! The '10 inch Mini Bluetooth Wireless Keyboard And Mouse Set Air Slim Keyboard For Phone Android Windows Tablet 蓝牙无线键盘 | Shopee Malaysia' is priced at 3.422417927366264.\n",
     "\n",
     "\n",
     "**Question 3**\n",
@@ -758,7 +771,7 @@
     "\n",
     "- **User**: Tell us **the price of** belt!\n",
     "\n",
-    "- **Bot**: I found the product you're looking for! The 'Men Slimming Slim Singlet Vest Belt Slim n Body Fit Shaper | Shopee Malaysia' is priced at 2.7995939187463796.\n",
+    "- **Bot**: I found the product you're looking for! The 'Men Slimming Slim Singlet Vest Belt Slim n Body Fit Shaper | Shopee Malaysia' is priced at 2.7995939187463796. \n",
     "\n",
     "---\n",
     "\n",
@@ -775,7 +788,7 @@
     "\n",
     "- **User**: Can you find **the rating of** wireless keyboard?\n",
     "\n",
-    "- **Bot**: The 'NIXXOS For iPad10 Wireless Keyboard Ccase for 10.2'' iPad 7th/8th/9th Gen 10.9'' Air4/Air5 2021/2020 Pro 11'' 7-color Backlight Magnetic Keyboard Leather Cover | Shopee Malaysia' has a rating of 4.9 stars.\n",
+    "- **Bot**: The '10 inch Mini Bluetooth Wireless Keyboard And Mouse Set Air Slim Keyboard For Phone Android Windows Tablet 蓝牙无线键盘 | Shopee Malaysia' has a rating of 4.9 stars.\n",
     "\n",
     "\n",
     "**Question 3**\n",
@@ -828,7 +841,7 @@
     "\n",
     "- **User**: How much is its price? *(User can also ask: What about its price?)*\n",
     "\n",
-    "- **Bot**: I found the product you're looking for! The '1081 PU SLING BAG KULIT leather Casual Beg Tangan Wanita women Shoulder Wallet Purse Travel READY STOCK QQF WHOLESALE | Shopee Malaysia' is priced at 4.017214855598254.\n",
+    "- **Bot**: : I found the product you're looking for! The '1081 PU SLING BAG KULIT leather Casual Beg Tangan Wanita women Shoulder Wallet Purse Travel READY STOCK QQF WHOLESALE | Shopee Malaysia' is priced at 4.017214855598254.\n",
     "\n",
     "\n",
     "**Conversation 3**\n",
@@ -854,7 +867,7 @@
     "\n",
     "- **User**: Can you give product recommendations for **customer ID** 299?\n",
     "\n",
-    "- **Bot**: Customer 299 last logged in 1 day ago on 2024-10-26 and their most recent checkout was 2 days ago on 2024-10-25.  \n",
+    "- **Bot**: Great news! We found the information for customer ID 299. Customer 299 last logged in 1 days ago on 2024-11-08 and their most recent checkout was 9 days ago on 2024-10-31.\n",
     "  Based on your purchase history, I recommend these products:\n",
     "  \n",
     "  title | price_actual\n",
@@ -867,7 +880,7 @@
     "\n",
     "- **User**: Please provide product recommendations for **customer ID** 126576!\n",
     "\n",
-    "- **Bot**: Customer 126576 last logged in 20 days ago on 2024-10-07 and their most recent checkout was 180 days ago on 2024-04-30.  \n",
+    "- **Bot**: Great news! We found the information for customer ID 126576. Customer 126576 last logged in 20 days ago on 2024-10-20 and their  most recent checkout was 63 days ago on 2024-09-07.\n",
     "  Based on your purchase history, I recommend these products:\n",
     "\n",
     "  title | price_actual\n",
@@ -880,7 +893,7 @@
     "\n",
     "- **User**: Tell me the product recommendations for **customer ID** 105738.\n",
     "\n",
-    "- **Bot**: Customer 105738 last logged in 30 days ago on 2024-09-27 and their most recent checkout was 91 days ago on 2024-07-28.  \n",
+    "- **Bot**: Great news! We found the information for customer ID 105738. Customer 105738 last logged in 30 days ago on 2024-10-10 and their most recent checkout was 32 days ago on 2024-10-08.\n",
     "  Based on your purchase history, I recommend these products:\n",
     "\n",
     "  title | price_actual\n",
