Added more explanations to the Chatbot report

--- a/Chatbot/chatbot_report.ipynb
+++ b/Chatbot/chatbot_report.ipynb
@@ -87,9 +87,9 @@
     "\n",
     "```python\n",
     "# Load datasets\n",
-    "customers_df = pd.read_csv(\"../Cleaned_Datasets/customer_SG_only.csv\", index_col=0)  # customer data\n",
-    "orders_df = pd.read_csv(\"../Cleaned_Datasets/orders_generated.csv\", index_col=0)  # order data\n",
-    "products_df = pd.read_csv(\"../Cleaned_Datasets/products_cleaned.csv\", index_col=0)  # product data\n",
+    "customers_df = pd.read_csv(\"../Cleaned_Datasets/customers_sg.csv\", index_col=0)  # customer data\n",
+    "orders_df = pd.read_csv(\"../Cleaned_Datasets/orders.csv\", index_col=0)  # order data\n",
+    "products_df = pd.read_csv(\"../Cleaned_Datasets/products.csv\", index_col=0)  # product data\n",
     "\n",
     "# Convert customer_id columns to strings in both DataFrames\n",
     "customers_df['customer_id'] = customers_df['customer_id'].astype(str)\n",
@@ -131,8 +131,9 @@
     "    # Regex patterns to detect order query intent\n",
     "    if re.search(r'order.*id', user_input, re.IGNORECASE):\n",
     "        intent = \"order_query\"\n",
-    "        order_id = re.search(r'order_[0-9]+', user_input, re.IGNORECASE)\n",
-    "        return intent, {\"order_id\": order_id.group(0)} if order_id else {\"order_id\": None}\n",
+    "        order_id = re.search(r'\\b\\d+\\b', user_input)  \n",
+    "        return intent, {\"order_id\": int(order_id.group(0))} if order_id else {\"order_id\": None}\n",
+    "\n",
     "    \n",
     "    # Regex patterns to detect product price or rating queries\n",
     "    if re.search(r'price|rating', user_input, re.IGNORECASE):\n",
@@ -257,10 +258,10 @@
     "    import pandas as pd\n",
     "    import os\n",
     "\n",
-    "    base_dir = os.path.dirname(os.path.abspath(__file__))\n",
-    "    customers_df = pd.read_csv(os.path.join(base_dir, \"../Cleaned_Datasets/customer_SG_only.csv\"), index_col=0)\n",
-    "    orders_df = pd.read_csv(os.path.join(base_dir, \"../Cleaned_Datasets/orders_generated.csv\"), index_col=0)\n",
-    "    products_df = pd.read_csv(os.path.join(base_dir, \"../Cleaned_Datasets/products_cleaned.csv\"), index_col=0)\n",
+    "    base_dir = os.path.dirname(os.path.abspath(__file__))  # Get the directory of the current file\n",
+    "    customers_df = pd.read_csv(os.path.join(base_dir, \"../Cleaned_Datasets/customers_sg.csv\"), index_col=0)\n",
+    "    orders_df = pd.read_csv(os.path.join(base_dir, \"../Cleaned_Datasets/orders.csv\"), index_col=0)\n",
+    "    products_df = pd.read_csv(os.path.join(base_dir, \"../Cleaned_Datasets/products.csv\"), index_col=0)\n",
     "\n",
     "    customers_df['customer_id'] = customers_df['customer_id'].astype(str)\n",
     "    orders_df['customer_id'] = orders_df['customer_id'].astype(str)\n",
