Analysis of Customer Retention and Lifetime Value

--- a/Subgroup A/Question 2_Analysis of Customer Retention and Lifetime Value.ipynb
+++ b/Subgroup A/Question 2_Analysis of Customer Retention and Lifetime Value.ipynb
@@ -21,19 +21,19 @@
     "\n",
     "# Stakeholders and Success Criteria\n",
     "\n",
-    "1. **Marketing and Retention Teams**  \n",
+    "### 1. **Marketing and Retention Teams**  \n",
     "   - **Needs**: Insights into customer behavior and segment-specific retention trends to tailor engagement campaigns that target at-risk customer groups.\n",
     "   - **Success Criteria**: Identification of high-risk segments, optimized campaigns to reduce churn, and targeted recommendations for increasing CLV through strategic engagement efforts.\n",
     "   \n",
-    "2. **Data and Analytics Teams**  \n",
+    "### 2. **Data and Analytics Teams**  \n",
     "   - **Needs**: Comprehensive data on customer lifetime value and churn metrics for analysis, enabling accurate tracking of retention initiatives' effectiveness.\n",
     "   - **Success Criteria**: Implementation of reliable churn and CLV calculations segmented by customer demographics, engagement, and campaign type, allowing precise monitoring and evaluation.\n",
     "\n",
-    "3. **Product and Customer Experience Teams**  \n",
+    "### 3. **Product and Customer Experience Teams**  \n",
     "   - **Needs**: Understanding of key drivers behind customer loyalty to improve the overall user experience and ensure alignment with customer needs.\n",
     "   - **Success Criteria**: Insights into customer preferences and behaviors, translating to actionable recommendations that enhance the value provided by products and services.\n",
     "\n",
-    "4. **Executive Leadership**  \n",
+    "### 4. **Executive Leadership**  \n",
     "   - **Needs**: High-level understanding of retention and CLV trends to assess business performance and prioritize investments that maximize customer profitability.\n",
     "   - **Success Criteria**: Strategic recommendations on high-value segments, along with quantified benefits of proposed retention strategies, demonstrating clear impact on long-term profitability.\n",
     "\n",
@@ -45,27 +45,27 @@
     "**Enhance customer retention and lifetime value (CLV)** by identifying high-risk segments, evaluating the effectiveness of current retention strategies, and refining approaches to maximize long-term profitability. This project focuses on uncovering actionable insights through the analysis of churn, retention, and CLV across critical dimensions, enabling the business to craft targeted, data-driven strategies for optimized customer engagement and profitability.\n",
     "\n",
     "## Key Success Criteria\n",
-    "1. **Accurate Identification of High-Risk Customer Segments**  \n",
+    "### 1. **Accurate Identification of High-Risk Customer Segments**  \n",
     "   - **Metric**: Precise monthly churn rates across customer segments.\n",
     "   - **Success Measure**: Identification of demographic groups, engagement levels, or campaign participants with above-average churn, guiding targeted retention actions.\n",
     "\n",
-    "2. **Measurable Increase in Customer Retention and CLV**  \n",
-    "   - **Metric**: Retention and CLV improvements following new initiatives.\n",
+    "### 2. **Measurable Increase in Customer Retention and CLV**  \n",
+    "   - **Metric**: Retention rate and CLV improvements following new initiatives.\n",
     "   - **Success Measure**: 10-15% increase in retention rates or CLV among identified segments, reflecting the efficacy of revised retention strategies.\n",
     "\n",
-    "3. **Campaign Performance Analysis and Recommendations**  \n",
-    "   - **Metric**: Retention and CLV by campaign type.\n",
+    "### 3. **Campaign Performance Analysis and Recommendations**  \n",
+    "   - **Metric**: Retention rates and CLV by campaign type.\n",
     "   - **Success Measure**: Comprehensive insights into campaign effectiveness, highlighting high-impact campaigns that drive long-term customer engagement and profitability.\n",
     "\n",
     "---\n",
     "\n",
     "# Project Scope\n",
     "\n",
-    "1. **Calculate Monthly Customer Churn Rate**  \n",
+    "### 1. **Calculate Monthly Customer Churn Rates**  \n",
     "   - **Objective**: Detect patterns of customer attrition to uncover periods with heightened churn risk, enabling proactive retention strategies.\n",
     "   - **Approach**: Perform month-to-month churn calculations to observe disengagement trends, facilitating timely intervention.\n",
     "\n",
-    "2. **Comprehensive Analysis of Customer Retention Rates**  \n",
+    "### 2. **Comprehensive Analysis of Customer Retention Rates**  \n",
     "   - **Objective**: Understand retention dynamics across demographic and behavioral segments, identifying groups that are more or less engaged and loyal.\n",
     "   - **Approach**:\n",
     "      - **Monthly Retention Trends**: Track month-by-month retention rates to identify seasonal or time-based fluctuations impacting customer loyalty.\n",
@@ -73,7 +73,7 @@
     "      - **Retention by Engagement Level**: Analyze differences between highly engaged and less engaged customers, emphasizing the role of engagement in customer loyalty.\n",
     "      - **Retention by Promotional Campaign Type**: Evaluate campaign effectiveness in fostering long-term customer loyalty.\n",
     "\n",
-    "3. **In-Depth Analysis of Customer Lifetime Value (CLV)**  \n",
+    "### 3. **In-Depth Analysis of Customer Lifetime Value (CLV)**  \n",
     "   - **Objective**: Identify customer segments that generate the most long-term revenue, informing retention strategies focused on high-value customers.\n",
     "   - **Approach**:\n",
     "      - **CLV by Month**: Monitor monthly CLV to detect peak value periods, guiding engagement initiatives.\n",
@@ -1865,7 +1865,7 @@
     "### Key Insights\n",
     "1. **Early Cohorts Show Strong Initial Retention**: Cohorts such as January, February, and March 2019 maintain relatively higher retention rates over a few months. For instance, the March 2019 cohort maintains a reasonable retention rate of 51% even three months after the initial purchase. Similarly, the February 2019 cohort maintains a reasonable rate of 55% even four months after the initial purchase.\n",
     "2. **Retention Drops Rapidly Over Time**: Across all cohorts, there is a noticeable decline in retention rates within a few months. This suggests that while customers initially engage with repeat purchases, maintaining engagement becomes challenging over longer periods.\n",
-    "3. **Retention Stability for August 2019 Cohort**: The August 2019 cohort demonstrates distinct retention patterns, maintaining an exceptionally high retention rate of 100% in both the first and second months following initial purchase. By year-end, the cohort sustains a retention rate of 33-44%. These trends suggest that specific factors associated with August 2019 may have positively influenced customer retention during these months, possibly due to targeted marketing efforts, seasonal effects, or unique product offerings. Further analysis could uncover the key drivers of this enhanced retention performance.\n",
+    "3. **Retention Stability for August 2019 Cohort**: The August 2019 cohort demonstrates unique retention patterns, maintaining an exceptionally high retention rate of 100% in both the first and second months following their initial purchase. By year-end, the cohort still sustains a retention rate of 33-44%. These trends suggest that specific factors associated with August 2019 may have positively influenced customer retention during these months, possibly due to targeted marketing efforts, seasonal effects, or unique product offerings. Further analysis could uncover the key drivers of this enhanced retention performance.\n",
     "4. **Challenges in Retaining Later Cohorts**: The retention rates for cohorts starting from September 2019 are particularly low, with most rates falling to 0% within a few months. This drop could imply seasonal trends, diminishing customer interest, or issues with the retention strategy.\n",
     "\n",
     "---\n",
