Analysis of Marketing Channels and Campaigns

--- a/Subgroup A/Question_3_Analysis_of_Marketing_Channels_and_Campaigns.ipynb
+++ b/Subgroup A/Question_3_Analysis_of_Marketing_Channels_and_Campaigns.ipynb
@@ -19,16 +19,22 @@
       "source": [
         "# **Analyzing the Most Effective Marketing Channels and Campaigns for E-Commerce Business**\n",
         "\n",
-        "Business objective: Identify the most effective marketing channels and campaigns to optimize marketing spend.\n",
+        "**Key Business Objective:** Identify the most effective Marketing Channels and Campaigns to optimize Marketing spend.\n",
         "\n",
         "\n",
-        "**Question 1 : Evaluate the ROI of different marketing channels**\n",
         "\n",
-        "1. **Business goal**: Determine which channels offer the highest ROI and engagement, allowing Shopee to optimize the allocation of their marketing budget.\n",
+        "---\n",
         "\n",
-        "Identify underperforming channels and redirect marketing budgets towards those yielding higher ROI to enhance cost efficiency.\n",
         "\n",
-        "2. **Key Metrics:**\n",
+        "### **1. Evaluate the ROI of different Marketing Channels**\n",
+        "\n",
+        "**Business Goal**:\n",
+        "\n",
+        "\n",
+        "*   Determine which channels offer the highest ROI and engagement, allowing Shopee to optimize the allocation of their marketing budget.\n",
+        "*   Identify underperforming channels and redirect marketing budgets towards those yielding higher ROI to enhance cost efficiency.\n",
+        "\n",
+        "**Key Metrics:**\n",
         "\n",
         "\n",
         "*   Total revenue: Indicates effectiveness of the marketing channel in driving sales\n",
@@ -39,16 +45,25 @@
         "\n",
         "\n",
         "\n",
-        "**Question 2 : Analyze the impact of various promotional campaigns on sales**\n",
         "\n",
-        "1. **Business goal:**\n",
         "\n",
-        "Determine which promotional campaigns drive the most sales and provide data-driven insights to Shopee regarding promotional planning.\n",
+        "### **2. Analyze the impact of various Promotional Campaigns on Sales**\n",
         "\n",
-        "2. **Key Metrics**\n",
+        "**Business Goal:**\n",
+        "\n",
+        "\n",
+        "*   Determine which promotional campaigns drive the most sales and provide data-driven insights to Shopee regarding promotional planning.\n",
+        "\n",
+        "**Key Metrics**\n",
         "\n",
         "*   Total sales : Indicates impact of various campaigns on sales\n",
-        "*   Average Order Value (AOV) : Assess the revenue generated per order"
+        "*   Average Order Value (AOV) : Assess the revenue generated per order\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Through an analysis of Shopee's Marketing Channels and Promotional Campaigns, our goal is to identify which channels and campaigns yield the highest ROI and sales with optimal cost efficiency. Based on these insights, we will provide recommendations for Shopee to strategically allocate its marketing budget for maximum impact."
       ],
       "metadata": {
         "id": "qYSdWIuT--xH"
