Analysis of Customer Retention and Lifetime Value

--- a/Subgroup A/Question 2_Analysis of Customer Retention and Lifetime Value.ipynb
+++ b/Subgroup A/Question 2_Analysis of Customer Retention and Lifetime Value.ipynb
@@ -3223,7 +3223,7 @@
     "# Load datasets\n",
     "customer_data = pd.read_csv('../Cleaned_Datasets/customers_sg.csv')\n",
     "orders_data = pd.read_csv('../Cleaned_Datasets/orders.csv')\n",
-    "products_cleaned = pd.read_csv('../Cleaned_Datasets/products.csv')\n",
+    "products_data = pd.read_csv('../Cleaned_Datasets/products.csv')\n",
     "\n",
     "#  Merge orders and product data to include product price in sales data\n",
     "sales_data = pd.merge(orders_data, products_data[['product_id', 'price_actual']], on='product_id', how='left')\n",
