Updated data preparation

--- a/Data Preparation/Data_Preparation_2.ipynb
+++ b/Data Preparation/Data_Preparation_2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "0g19E3luKw-5"
       },
@@ -10,21 +10,19 @@
       "source": [
         "import os\n",
         "import numpy as np\n",
-        "import pandas as pd\n",
-        "import sqlite3\n",
-        "import math"
+        "import pandas as pd"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "PQUGTuhTLmzC"
       },
       "outputs": [],
       "source": [
-        "customers_df = pd.read_csv('../Cleaned_Datasets/customer_SG_only.csv')\n",
-        "products_cleaned = pd.read_csv('../Cleaned_Datasets/products_cleaned.csv')"
+        "customers_df = pd.read_csv('../Cleaned_Datasets/customers_sg.csv')\n",
+        "products = pd.read_csv('../Cleaned_Datasets/products.csv')"
       ]
     },
     {
@@ -33,7 +31,7 @@
         "id": "y-WpZt-ItP53"
       },
       "source": [
-        "# **Step 1 : Data Cleaning for products_cleaned dataset**\n",
+        "# **Step 1 : Data Cleaning for products dataset**\n",
         "\n",
         "We want to clean the products dataset to make use of the products sold for synthetic data generation of our sales dataset.\n",
         "*  Removed products with total_sold == 0: Ensure that products in sales dataset are sold before\n",
@@ -43,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "fPliid8Ua5TB"
       },
@@ -55,11 +53,11 @@
         "\n",
         "# Filter the DataFrame to exclude rows with titles containing specified phrases and total_sold == 0\n",
         "# Filter the DataFrame to exclude rows with specified phrases in 'title', 'total_sold' equal to 0, and 'price_actual' outside the 1 to 10000 range\n",
-        "products_cleaned = products_cleaned[\n",
-        "    ~products_cleaned['title'].str.contains(pattern, case=False, na=False) &\n",
-        "    (products_cleaned['total_sold'] != 0) &\n",
-        "    (products_cleaned['price_actual'] >= 1) &\n",
-        "    (products_cleaned['price_actual'] <= 10000)\n",
+        "products = products[\n",
+        "    ~products['title'].str.contains(pattern, case=False, na=False) &\n",
+        "    (products['total_sold'] != 0) &\n",
+        "    (products['price_actual'] >= 1) &\n",
+        "    (products['price_actual'] <= 10000)\n",
         "]"
       ]
     },
@@ -83,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "BQEt8E6ZckPA"
       },
@@ -120,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "VKrdFYPDt_Tc"
       },
@@ -335,13 +333,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9tfiDW6z5Uk7",
-        "outputId": "77f67159-7682-42b3-9dc7-57b5795ccf57"
+        "outputId": "d31fe51e-692b-4e4e-e0c9-05fa53879785"
       },
       "outputs": [
         {
@@ -403,13 +401,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SaQFj8EBVX-3",
-        "outputId": "860c8caf-34b4-4ed6-9094-9ed2973eed26"
+        "outputId": "b0b3489a-f3fc-4f90-ff28-f4c2a1283623"
       },
       "outputs": [
         {
@@ -470,13 +468,13 @@
             "\n",
             "          target_audience  \n",
             "0      returning customer  \n",
-            "1            new customer  \n",
+            "1      returning customer  \n",
             "2      returning customer  \n",
             "3      returning customer  \n",
             "4      returning customer  \n",
             "...                   ...  \n",
-            "99995        new customer  \n",
-            "99996        new customer  \n",
+            "99995  returning customer  \n",
+            "99996  returning customer  \n",
             "99997  returning customer  \n",
             "99998  returning customer  \n",
             "99999  returning customer  \n",
@@ -508,11 +506,7 @@
         "unique_session_ids = np.random.choice(range(1, 999999), size=num_rows, replace=False)\n",
         "session_ids = np.random.choice(unique_session_ids, size=num_rows, replace=False)\n",
         "\n",
-        "# # Generate customer ids\n",
-        "# unique_customer_ids = np.random.choice(range(100000, 200000), size=int(num_rows * 0.8), replace=False)\n",
-        "# repeated_customer_ids = np.random.choice(unique_customer_ids, size=int(num_rows * 0.2), replace=True)\n",
-        "# customer_ids = np.concatenate((unique_customer_ids, repeated_customer_ids))\n",
-        "# np.random.shuffle(customer_ids)\n",
+        "# Generate customer ids based on customer_id in the customer_df\n",
         "customer_ids = np.random.choice(customers_df['customer_id'], size=num_rows, replace=True)\n",
         "\n",
         "# Generate gender & age columns for the customer\n",
@@ -631,13 +625,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "P_mnebBxe4VR",
-        "outputId": "fa80bac0-de33-4d5c-df2b-ee786e785221"
+        "outputId": "0f08f539-d732-45cd-d3c8-5f7a7fe35f3b"
       },
       "outputs": [
         {
@@ -658,10 +652,10 @@
         "\n",
         "# Shopee Sales Dataset\n",
         "target_categories = ['Home & Living', 'Health & Beauty', 'Mobile & Accessories']\n",
-        "category_sales_prob = products_cleaned['main_category'].value_counts(normalize=True)\n",
+        "category_sales_prob = products['main_category'].value_counts(normalize=True)\n",
         "category_sales_prob.update(category_sales_prob[target_categories] * 2)\n",
         "category_sales_prob = category_sales_prob / category_sales_prob.sum()\n",
-        "product_category_prob = products_cleaned['main_category'].map(category_sales_prob)\n",
+        "product_category_prob = products['main_category'].map(category_sales_prob)\n",
         "product_category_prob = product_category_prob / product_category_prob.sum()\n",
         "\n",
         "order_id = [np.random.randint(100000, 10000000) for _ in range(num_rows)]\n",
@@ -670,7 +664,7 @@
         "extended_session_ids = unique_session_ids[:100000]\n",
         "\n",
         "\n",
-        "duplicated_product_ids = np.random.choice(products_cleaned['product_id'], size=num_rows, replace=True, p=product_category_prob)\n",
+        "duplicated_product_ids = np.random.choice(products['product_id'], size=num_rows, replace=True, p=product_category_prob)\n",
         "duplicated_customer_ids = np.random.choice(campaign_df['customer_id'], size=num_rows, replace=True)\n",
         "all_campaign_types = campaign_df['campaign_type'].unique().tolist() + ['Regular day']\n",
         "\n",
@@ -685,7 +679,7 @@
         "    'is_campaign': is_campaign\n",
         "})\n",
         "\n",
-        "product_df = products_cleaned[['product_id', 'main_category', 'price_actual', 'total_sold', 'title', 'Stock']].rename(columns={'price_actual': 'price'})\n",
+        "product_df = products[['product_id', 'main_category', 'price_actual', 'total_sold', 'title', 'Stock']].rename(columns={'price_actual': 'price'})\n",
         "\n",
         "orders = pd.DataFrame({\n",
         "    'order_id': order_id,\n",
